Fix spacing on mobile layout

--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,11 @@ footer {
 
 	.right {
 		width: 80%;
-		margin: 65px auto 70px auto;
+		margin: 50px auto 50px auto;
 	}
 
 	.instructions {
-		width: 85%;
+		width: 90%;
 	}
 }
 
